--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-# Ignore all files except .c and .h files
+# Ignore all files by default
 *
-!*.c
-!*.h
+
+# Except directories
+!*/
+
+# Except .cpp and .h/.hpp files
 !*.cpp
+!*.h
 !*.hpp
+!*.c
